--- a/app/views/admin/equipment/_form.html.erb
+++ b/app/views/admin/equipment/_form.html.erb
@@ -1,61 +1,98 @@
-<%= form_for(@equipment) do |f| %>
-  <% if @equipment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@equipment.errors.count, "error") %> prohibited this equipment from being saved:</h2>
+<% if @equipment.errors.any? %>
+  <div id="error_explanation">
+    <% @equipment.errors.full_messages.each do |message| %>
+      <p class="label label-warning"><%= message %></p>
+    <% end %>
+  </div>
+<% end %>
 
-      <ul>
-      <% @equipment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_for [:admin, @equipment], html: {class: "form-horizontal"} do |f| %>
+    
+    <div class="tabbable tab-content-bordered">
+        <ul class="nav nav-tabs bg-primary">
+            <li class="active"><a href="#control-tab1" data-toggle="tab">Tiếng Việt</a></li>
+            <li><a href="#control-tab2" data-toggle="tab">English </a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane has-padding active" id="control-tab1">
+                    
+                <div class="form-group">
+                    <%= f.label "Name: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :name_vn, class: "form-control" %>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <%= f.label "Quantity: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :quantity, class: "form-control price_control" %>
+                    </div>
+                </div>
+                    
+                <div class="form-group">
+                    <%= f.label "Category: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.collection_select(:category_equipment_id, CategoryEquipment.all, :id, :title_vn, {:prompt => "Choose category..."}, {class: "select"}) %>
+                    </div>
+                </div>
+                    
+                <div class="form-group">
+                    <%= f.label "Manufacturer: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.collection_select(:manufacturer_equipment_id, ManufacturerEquipment.all, :id, :name_vn, {:prompt => "Choose manufacturer..."}, {class: "select"}) %>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <%= f.label "Capacity: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :capacity, class: "form-control" %>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <%= f.label "Status: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :status_vn, class: "form-control" %>
+                    </div>
+                </div>
+            
+                <div class="form-group">
+                    <%= f.label "Note: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_area :note_vn, rows: "5", cols: "5", class: "form-control" %>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane has-padding" id="control-tab2">
+                <div class="form-group">
+                    <%= f.label "Name: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :name_en, class: "form-control" %>
+                    </div>
+                </div>
+                    
+                <div class="form-group">
+                    <%= f.label "Status: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_field :status_en, class: "form-control" %>
+                    </div>
+                </div>
+                    
+                <div class="form-group">
+                    <%= f.label "Note: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-10">
+                        <%= f.text_area :note_en, rows: "5", cols: "5", class: "form-control" %>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
-  </div>
-  <div class="field">
-    <%= f.label :name_vn %><br>
-    <%= f.text_field :name_vn %>
-  </div>
-  <div class="field">
-    <%= f.label :quantity %><br>
-    <%= f.number_field :quantity %>
-  </div>
-  <div class="field">
-    <%= f.label :category_equipment_id %><br>
-    <%= f.number_field :category_equipment_id %>
-  </div>
-  <div class="field">
-    <%= f.label :manufacturer_equipment_id %><br>
-    <%= f.number_field :manufacturer_equipment_id %>
-  </div>
-  <div class="field">
-    <%= f.label :status_vn %><br>
-    <%= f.text_field :status_vn %>
-  </div>
-  <div class="field">
-    <%= f.label :capacity %><br>
-    <%= f.text_field :capacity %>
-  </div>
-  <div class="field">
-    <%= f.label :note_vn %><br>
-    <%= f.text_area :note_vn %>
-  </div>
-  <div class="field">
-    <%= f.label :name_en %><br>
-    <%= f.text_field :name_en %>
-  </div>
-  <div class="field">
-    <%= f.label :status_en %><br>
-    <%= f.text_field :status_en %>
-  </div>
-  <div class="field">
-    <%= f.label :note_en %><br>
-    <%= f.text_area :note_en %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="text-right margin-submit">
+        <%= button_tag 'Save <i class="icon-plus22 position-right"></i>'.html_safe, class: "btn btn-primary"%>
+        <%= link_to 'Cancel <i class="icon-cross2"></i>'.html_safe,  { controller: "admin/equipment", action: "index" },class: "btn bg-warning-400"%>
+    </div>
 <% end %>
